--- a/css/styles.css
+++ b/css/styles.css
@@ -11,32 +11,26 @@ body{
 /* fuentes */
 h1{
     font-family:  'Poppins', sans-serif;
-    font-size: 100px;
-    color: #ffffff;
-    
+    color: #ffffff;   
 }
 
 h2{
     font-family: 'Poppins', sans-serif;
-    font-size: 24px;
     color: #ffffff;
 }
 
 h3{
     font-family: 'Sintony', sans-serif;
-    font-size: 22px;
     color: #ffffff;
 }
 
 h4{
     font-family: 'Sintony', sans-serif;
-    font-size: 20px;
     color: #0C1726;
 }
 
 h5{
     font-family: 'Sintony', sans-serif;
-    font-size: 19px;
     color: #ffffff;
 }
 
@@ -49,73 +43,105 @@ nav a{
 
 p{
     font-family: 'Sintony', sans-serif;
-    font-size: 22px;
     color: #ffffff;
 } 
 
-
 /* header */
 .header{
-    background-color: #1B2740;
-    height: 90px;
-    width: 100%;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: left;
     position: fixed;
+    flex-wrap: nowrap;
+    position: relative;
+    grid-area: header1;
+    height: 90px;
+    margin: 0;
+    padding: 0;
     z-index: 999; 
 }
 
-.header__icono{
-    padding: 6px;
-    width: 90px;
-    height:auto;
+.header--acercaDe{
+    display: flex;
+    flex-direction: row;
     position: fixed;
+    flex-wrap: nowrap;
+    position: relative;
+    grid-area: header1;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    z-index: 999; 
+}
+
+/* .header__div img{
+    visibility: hidden;
+} */
+
+.header__div img{
+    height: 10px;
+    visibility: hidden;
+}
+
+.header__icono{
+    display: flex;
+    justify-self: left;
+    position: fixed;
+    z-index: 999; 
+    height:auto;
+    width: 90px;
     margin: 12px;
+    padding: 6px;
 }
 
 .header__nav > ul{
     display: flex;
+    height: 90px;
     flex-flow: nowrap;
     justify-content:flex-end;
 }
 
+.header__nav{
+    width: 100%;
+    background-color: #1B2740;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+}
+
 /* lista de botones-menu */
 .header__nav__menu{
-    display: flex;
-	flex-direction: row;
+    display:flex;
     list-style: none;
-    font-size: 0;
-    width: 100vw;
+    align-items: center;    
+	flex-direction: row;
+    margin-right: 5px; 
+    height: 80px;
 }
 
 .header__nav__menu li{
-    width: 10%;
-    font-size: 22px;
-    width: 250px;
-    padding: 30px 0px;
+    display: flex;
     text-align: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    width: 17vw;
 }
 
-.navFlex__inicio{order: -2;}
-.navFlex__acercade{order: 0;}
-.navFlex__servicios{order: 3;}
-.navFlex__quienessomos{order: 5;}
-.navFlex__contacto{order: 8;}
 
 .header__nav__submenu{
-    font-size: 22px;
-    top: 80px;
-    left: 780px;
-    display: none;
+    position: absolute;
+    text-align: center;
     list-style: none;
+    display: none;
+    height: auto;
+    width: auto;
     z-index: 999; 
+    top: 60px;
+    
 }
 
 .header__nav__menu ul li{
     display: block;
-    background-color: #1B2740;
+    background-color: #1B2740; 
 }
 
 .header__nav__menu li:hover >ul{
@@ -125,6 +151,7 @@ p{
 .header__nav__submenu li{
     border-top: 1px solid #8b8b8b;
     padding: 5px;
+    font-size: 16px;
 }
 
 .header__nav__submenu li:first-child{
@@ -135,34 +162,62 @@ p{
     background-color:#686f86;
 }
 
-/* footer */
+/* FOOTER */
+
 .footer{
+    grid-area: footer1;
     display: flex;
     background-color:#555C73;
     height: 100px;
-    font-size: 19;
+    font-size: 1.2rem;
     z-index: 998;
 }
 
 .footer__imagen{
-    padding: 6px;
-    height: 67.85px;
-    width: 90px;
-    margin: 15px;  
+    display: flex;
+    width: 10vw;
+    justify-content: left;
+    align-content: center;
+    align-items: center;
+}
+
+.footer__imagen img{
+    height: 85%;
+    width: auto;
+    justify-self: center;
+    padding:15px;
 }
 
 .footer__div{
     z-index: 998;
     display: flex;
+    width: 80vw;
+    align-items: center;
+    padding: 5px;
 }
 
 .footer__div__referencias{
-    margin:30px;
+    display: flex;
+    justify-content: center;
+    width: 40%;
+}
+
+.footer__div__referencias i{
+    color: #ffffff;
+    padding: 2px;
 }
 
 .footer__div__contacto{
-    margin: 30px 30px 30px 150px;
+    width: 60%;
+    display: flex;
+    justify-content: center;
 }
+
+.footer__div__contacto i{
+    color: #ffffff;
+    padding: 2px;
+}
+
 
 .footer__nav__referencias, .footer__nav__contacto{
     list-style: none;
@@ -174,53 +229,89 @@ p{
     height: 16px;
     width: auto;
 }
-
 /* contenedores de texto */
 /* h1 */
 .section__div__titulo{
-    margin-left: 100px;
-    padding: 30px 0 10px 0;
+    display: flex;
     z-index: 998;
+    width: 40vw;
+    padding: 5px 5px 10px 35px;
+    font-size: 6rem; 
+    margin-bottom: 50px;
+}
+
+.section__div__titulo--acercaDe{
+    display: flex;
+    z-index: 998;
+    width: 40vw;
+    padding: 0 5px 10px 35px;
+    font-size: 6rem;  
+    margin-bottom: 30px;
+}
+
+
+.section__div__titulo--contacto{
+    display: flex;
+    z-index: 998;
+    width: 65vw;
+    padding: 5px 5px 10px 0;
+    font-size: 6rem;
+    
 }
 
 /* h2 */
 .section__div__segundotitulo{
     z-index: 998;
+    font-size: 2.7rem;
     text-align: center; 
 }
 
 /* h3 */
 .section__div__tercertitulo{
-    margin-left: 100px;
-    padding: 5px 150px 5px 0;
+    display: flex;
     z-index: 998;
+    width: 40vw;
+    padding: 5px 5px 10px 35px;
+    font-size: 2.5rem; 
 }
 
 /* h4 */
 .section__div__equipo h4{
     z-index: 998;
     text-align: center;
+    font-size: 2rem;
 }
 
 /* p */
 .section__div__texto{
-    margin-left: 100px;
-    padding: 30px 150px 10px 0;
-    z-index: 998; 
+    display: flex;
+    width: 90vw;
+    height: 20vh;
+    z-index: 998;
+    padding: 0px 5px 50px 35px;
+    font-size: 1.8rem; 
+}
+
+.section__div__texto--acercaDe{
+    display: flex;
+    width: 90vw;
+    height: 20vh;
+    z-index: 998;
+    padding: 0px 5px 50px 35px;
+    font-size: 1.8rem;  
 }
 
 /* contenedores de imagenes */
 /* index */
-.section__div__fondo--index{
+.section__div--index{
     background-image: url("../assets/img/solucionesempresariales.png");
-    height: 100vh;
-    width: 100%;
+    height:100vh;
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;   
 }
-.section__div__fondo--index:before{
+.section__div--index:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -230,16 +321,15 @@ p{
 }
 
 /* acerca de */
-.section__div__fondo--acercade{
+.section__div--acercade{
     background-image: url("../assets/img/acercade.png");
     height:100vh;
-    width: 100%;
-    background-size: cover; 
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;   
 }
-.section__div__fondo--acercade:before{
+.section__div--acercade:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -249,19 +339,17 @@ p{
 }
 
 /* servicios */
-.section__div__fondo--servicios{
+.section__div--servicios{
     background-image: url("../assets/img/servicios.png");
     height:100vh;
-    width: 100%;
-    background-size: cover; 
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;   
 }
-.section__div__fondo--servicios:before{
+.section__div--servicios:before{
     content: "";
     background-color: #0C1726;
-    background-size: cover; 
     width: 100%;
     height:100vh;
     position: absolute;
@@ -269,34 +357,34 @@ p{
 }
 
 /* quienes somos */
-.section__div__fondo--quienessomos{
+.section__div--quienessomos{
     background-image: url("../assets/img/quienessomos.png");
     height:100vh;
-    width: 100%;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;   
 }
-.section__div__fondo--quienessomos:before{
+.section__div--quienessomos:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
     height:100vh;
     position: absolute;
-    opacity: 0.6;   
+    opacity: 0.7;   
 }
 
 /* contacto-formulario */
-.section__div__fondo--contacto{
+.section__div--contacto{
     background-image: url("../assets/img/contactanos.png");
     height:100vh;
-    width: 100%;
-    background-size: cover; 
+    background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: center;   
+    justify-content: center; 
+    /* align-items: center;   */
 }
-.section__div__fondo--contacto:before{
+.section__div--contacto:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -309,49 +397,62 @@ p{
 .section__div__table{
     display: flex; 
     height: 100vh;
-    
+    align-items: center;
+    width: 95vw;
+    margin:8vh 1vw;
 }
 
 .servicio{
     background-color: rgba(255, 255, 255, 0.705);
     border-right: 1px solid #686f86;
     border-radius: 15px;
-    margin: 140px 6px auto 6px;
-    padding: 15px;
-    height: 550px;
+    width: 19%;
+    height: 100%;
+    margin: 10px;
+    padding-bottom: 9px;
     align-items: center;
-    width: 100px;
     position: relative; 
-    flex-basis: 100%;
 }
 
 .servicio__imagen{
+    display: flex;
+    justify-self: center;
+    padding-top: 10px;
     width: 90px;
     height: auto;
-    float: left;
-    margin: 2px 75px 2px 75px;
+    margin: 0 auto;
 }
 
 .servicio__tipo{
     font-family:  'Poppins', sans-serif;
     color: #1B2740;
-    font-weight: 300;
+    margin-bottom: 8px;
     letter-spacing: 1px;
     text-align: center;    
 }
 
+.servicio__tipo h2{
+    font-size: 1.6rem;
+}
+
 .servicio__detalle{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
     font-family:  'Poppins', sans-serif;
-    font-size: 15px;
+    font-size: 1.2em;
+    width: 17vw;
     list-style: none;
     text-align: center;
     color: #151b25;
+    
 }
 
 .servicio__detalle__item{
+    width: 100%;
     border-top: 1px solid #8692b8;
-    line-height: 1.25;
-    padding: 7px 0;  
+    padding: 7px; 
+    
 }
 
 .servicio:last-child{
@@ -403,10 +504,14 @@ p{
 }
 .section__div__trayectoria p{
     color: #151b25;
-    font-size: 17px;
+    font-size: 0.9rem; 
     z-index: 998;
     text-align: center;
 }
+
+/* animaciones */
+swashIn
+
 
 /* SECCION : contacto */
 
@@ -415,42 +520,60 @@ p{
     justify-content: center;
     align-content: center;
     margin:0 auto;
-    z-index: 998;
+    
 }
 
 .section__div__formulario{
     flex-basis: 100%;
     box-sizing: border-box;
-    width: fit-content;
-    height: 420px;
+    padding: 5px;
+    width: 80vw;
+    height: fit-content;
     background-color:#c5ced98a;
     border-radius: 9px;
     font-family:  'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 1.2rem;
+    position: relative;
+    text-align: left;
+    margin:0 auto;
+    
 }
 
 fieldset{
     border:none;
-    padding: 25px 30px ;
+    padding: 15px 30px ;
 }
 
-input, textarea{
+input{
     outline: none;
     border:none;
     padding: 8px;
+    border-radius: 9px;
+    font-size: 1.1rem;
+}
+
+textarea{
+    outline: none;
+    border:none;
+    padding: 8px;
+    width: 20vw;
+    border-radius: 9px;
+    font-size: 1.1rem;
 }
 
 .section__div__campo, .section__div__check{
     padding: 5px;
+    
 }
 
-.section__div__campo input, textarea{
+.section__div__campo input, .section__div__campo textarea{
     border: solid 1px #8692b8;
-    font-size: 15px;
+    font-size: 1.2rem;
+    width: 75vw;
 }
 
 .campo, textarea{
-    width:915px;
+    width:100%;
     background-color: #ffffff94;
 }
 
@@ -483,3 +606,7 @@ input, textarea{
 .section__div__botones{
     z-index: 998;
 }
+
+
+
+
