--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,343 +1,181 @@
-/* medias queries */
-
-@media (max-width:1200px){
-    
-    .section__div__titulo h1{
-        font-size: 4rem;
-    }
-
-    .section__div__titulo--contacto h1{
-        font-size: 4rem;
-    }
-
-    .section__div__titulo--acercaDe h1{
-        font-size: 4rem;
-    }
-
-    .section__div__formulario{
-        font-size: 1.1rem;
-    }
-
-    p{
-        font-size: 1.1rem;
-    }
+/* media queries */
 
 
-    .section__div__formulario{
-        height: 410px;
-    }
-    
-    fieldset{
-        padding: 10px 15px ;
-    }
-    
-    .section__div__campo input, textarea{
-        font-size: 14px;
-    }
-    
+@media (max-width: 1200px){
 
-    fieldset{
-        padding: 10px 15px ;
-    }
-    
-    .section__div__campo input, textarea{
-        font-size: 0.9rem;
-    }
-    
-    .campo, textarea{
-        width: 800px;
-        padding: 5px;
+    /* títulos */
+    .display-1{
+        font-size: 5rem;
     }
 
-    nav a{
-        font-size: 1.1rem;
+    /* titulo h3 */
+    .section__div__tercertitulo h3{
+        font-size: 1.4rem;
     }
-
-    .header__nav__submenu, .header__nav__menu{
-        font-size:1rem;
-    }
-
-    .header__nav__menu li{
-        font-size: 1rem;
-        width: 17vw;
-    }
-}
-
-
-
-@media (max-width:890px) {
-    .section__div__titulo{
-        width: fit-content;
-    }
-
-    .section__div__titulo h1{
-        font-size: 3rem;
-    }
-
-    .section__div__titulo--contacto h1{
-        font-size: 3rem;
-    }
-
-    .section__div__titulo--acercaDe h1{
-        font-size: 3rem;
-    }
-
-    p{
-        font-size: 0.97rem;
-    }
-
-    .campo, textarea{
-        width: 690px;
-    }
-
-    .header__nav__submenu{
-        font-size:15px;
-    }
-
-    .header__nav__menu li{
-        font-size: 16px;
-        width: 17vw;
-    }
-
 
 }
 
-@media (max-width:856px){
-    .campo, textarea{
-        width: 680px;
-        padding: 5px;
-    }
-
-    .header__nav__menu li{
-        font-size: 0.6rem;
-        width: 17vw;
-    }
-
-    p{
-        font-size: 0.96rem;
-    }
-
-
-}
-
-@media (max-width:767px){
-
-    .section__div__titulo h1{
-        font-size: 2.5rem;
-    }
-    .section__div__titulo--contacto h1{
-        font-size:  2.5rem;
-    }
-
-    .section__div__titulo--acercaDe h1{
-        font-size: 2.5rem;
-    }
-     
-    .campo, textarea{
-        width: 490px;
-    }
-
-
-    .header__nav__submenu{
-        visibility: hidden;
-    }
-
-    .header__nav__menu ul{
-        width: 70vw;
-    }
-
-    .header__nav__menu li{
-        font-size: 0.5rem;
-        width: 17vw;
-    }
-
-    .footer{
-        display: block;
-        height: auto;
-    }
-
+@media (max-width:992px){
+    /* footer */
     .footer__div{
-        padding: 0 30vw;
-        display: inline-block;
-    }
-
-    .footer__imagen{
-        padding:8px;
-        align-items: center;
-        margin: 0 auto;
         justify-content: center;
     }
 
-    .footer__imagen img{
-        width: 110px;
-        height:auto;
-        
-    }
-    .footer__div__contacto{
-        width: 40vw;
-        align-items: center;
-        
-    }
-
-    .footer__div__referencias{
-        
-        width: 35vw;
-        text-align: center;
-    }
-
-    .footer__div__contacto a, .footer__div__referencias a{
-        font-size: 13px;
-        text-align: center;
-    }
-
-}
-
-@media (max-width:759px) {
-    .section__div__campo input, .section__div__campo textarea{
-        width: 70vw;
-    }
-
-    nav a {
-        font-size: 0.9rem;
-    }
-
-    .header__nav{
+    .footer__div__nav{
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-evenly;
     }
 
-    .header__nav__menu li{
-        width: 14vw;
+    /* card */
+    .section__div--contadoras{
+        box-sizing: border-box;
+        display: flex;
     }
 }
 
-
-@media (max-width:540px){
-    p{
-        font-size: 0.95rem;
-    }
-
-    .section__div__formulario{
-        font-size:0.95rem;
+@media (max-width:860px){ 
+    /* header */
+    .header__nav .nav-item{
+        font-size:0.95rem ;
     }
     
-    .section__div__campo input, textarea{
-        font-size: 0.95rem;
-    }
-
-    nav a {
-        font-size: 0.7rem;
-    }
-
-
 }
 
-/* vista mobile */
-@media (max-width:470px) {
-    .section__div__titulo h1{
-        font-size: 2rem;
-    }
-    .section__div__titulo--contacto h1{
-        font-size:  2rem;
+@media (max-width:815px){
+    /* header */
+    .header__nav .nav-item a{
+        font-size:0.9rem ;
     }
 
-    .section__div__titulo--acercaDe h1{
-        font-size: 2rem;
+    /* títulos */
+    .display-1{
+        font-size: 4rem;
     }
 
-    .header__nav__menu,.header__nav__submenu{
-        visibility: hidden;
-    }
-
-    .section__div__titulo,.section__div__tercertitulo {
-        margin-left: 5px; 
-    }
-    .section__div__texto p{
-        margin-left:5px ;
-    }
-
-    p{
-        font-size: 16px;
-    }
-
+    /* titulo h3 */
     .section__div__tercertitulo h3{
-        font-size: 19px;
+        font-size: 1.2rem;
     }
 
-    .header__div{
-        display: flex;
-        justify-content: right;
-        align-items: center;
-        position: fixed;
-        z-index: 999;
-        margin:0 auto;
-        height: 90px;
-        width: 100%;
+    /* texto */
+    p{
+        font-size: 1rem;
     }
-    
-    .header__div img{
-        visibility: visible;
-        display: flex;
-        justify-self: flex-end;
-        width:auto;
-        height: 40px;
-    }
-    
-   
 
-    .footer{
-        display: block;
-        height: auto;
+    /* contenedor titulos */
+    .section__div__titulo, 
+    .section__div__titulo--acercaDe{
+        margin-bottom: 20px;
+    }
+
+    /* quienes somos seccion */
+    .section--quienessomos{
+        justify-content: space-between;
+    }
+}
+
+@media (max-width:760px){
+    /* footer */
+    .footer__div__nav{
         text-align: center;
     }
 
-    .footer__div{
-        display: block;
-        text-align: center;
-        padding: 0 30vw;
-        text-align: center;
+}
+
+
+@media (max-width:620px){
+    /* header */
+    .header__nav .nav-item a{
+        font-size:0.8rem ;
+        padding:0;
+    }
+}
+
+@media (max-width:592px){
+    /* header */
+    .header__nav .nav-item a{
+        font-size:0.75rem ;
+        padding:0;
     }
 
-    .footer__imagen{
-        padding:8px;
-        align-items: center;
-        padding: 0 auto;
+    /* títulos */
+    .display-1{
+        font-size: 3.5rem;
     }
 
-    .footer__imagen img{
-        width: 90px;
-        height:auto;
-        
-    }
-    .footer__div__contacto{
-        width: 50vw;
-        align-items: center;
+    /* titulo h3 */
+    .section__div__tercertitulo h3{
+        font-size: 1rem;
     }
 
-    .footer__div__referencias{
-        width: 40vw;
-        text-align: center;
-    }
-
-    .footer__div__contacto a, .footer__div__referencias a{
-        font-size: 13px;
-    }
-
-    .section__div__formulario{
-        font-size: 14px;
-        height: 350px;
-    }
-    
-    fieldset{
-        padding: 10px 15px ;
-    }
-    
-    .section__div__campo input, textarea{
+    /* texto */
+    p{
         font-size: 0.95rem;
     }
-    
-    input{
+}
+
+@media (max-width:576.5px){
+    /* header icono */
+    .header__icono, .footer__icono{
+        width: 80px;
+        height: auto;
+    }
+}
+
+@media (max-width:505px){
+    /* títulos */
+    .display-1{
+        font-size: 3.2rem;
+    }
+
+    /* titulo h3 */
+    .section__div__tercertitulo h3{
+        font-size: 0.97rem;
+    }
+
+    /* texto */
+    p{
         font-size: 0.9rem;
     }
-    
+}
+
+@media (max-width:470px){
+    /* header icono */
+    .header__icono, .footer__icono{
+        width: 70px;
+        height: auto;
+    }
+
+    /* títulos */
+    .display-1{
+        font-size: 3rem;
+    }
+
+    /* titulo h3 */
+    .section__div__tercertitulo h3{
+        font-size: 0.9rem;
+    }
+
+    /* texto */
+    p{
+        font-size: 0.86rem;
+    }
+
+    /* footer */
+    .footer__div__nav .nav-link{
+        font-size: 0.85rem;
+    }
+
+}
+
+@media (max-width:440px){
+    /* títulos */
+    .display-1{
+        font-size: 2.5rem;
+    }
+
+    /* titulo h3 */
+    .section__div__tercertitulo h3{
+        font-size: 0.85rem;
+    }
 }
