--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Sintony&display=swap');
+
+/* titulos */
+/* font-family: 'Poppins', sans-serif; */
+
+/* cuerpo */
+/* font-family: 'Sintony'; */
+
 *{
     margin: 0;
     padding: 0;
@@ -44,191 +52,92 @@ nav a{
 p{
     font-family: 'Sintony', sans-serif;
     color: #ffffff;
+    font-size: 1.1rem;
 } 
 
 /* header */
 .header{
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    flex-wrap: nowrap;
-    position: relative;
     grid-area: header1;
-    height: 90px;
-    margin: 0;
-    padding: 0;
-    z-index: 999; 
-}
-
-.header--acercaDe{
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    flex-wrap: nowrap;
     position: relative;
-    grid-area: header1;
-    height: 40px;
-    margin: 0;
-    padding: 0;
-    z-index: 999; 
-}
-
-/* .header__div img{
-    visibility: hidden;
-} */
-
-.header__div img{
-    height: 10px;
-    visibility: hidden;
-}
-
-.header__icono{
-    display: flex;
-    justify-self: left;
-    position: fixed;
-    z-index: 999; 
-    height:auto;
-    width: 90px;
-    margin: 12px;
-    padding: 6px;
-}
-
-.header__nav > ul{
-    display: flex;
-    height: 90px;
-    flex-flow: nowrap;
-    justify-content:flex-end;
-}
-
-.header__nav{
-    width: 100%;
     background-color: #1B2740;
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
 }
 
-/* lista de botones-menu */
-.header__nav__menu{
-    display:flex;
-    list-style: none;
-    align-items: center;    
-	flex-direction: row;
-    margin-right: 5px; 
-    height: 80px;
+.header__icono, .footer__icono{
+    width: 90px;
+    height: auto;
 }
-
-.header__nav__menu li{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    font-size: 1.2rem;
-    width: 17vw;
-}
-
 
 .header__nav__submenu{
-    position: absolute;
-    text-align: center;
-    list-style: none;
-    display: none;
-    height: auto;
-    width: auto;
-    z-index: 999; 
-    top: 60px;
-    
-}
-
-.header__nav__menu ul li{
-    display: block;
     background-color: #1B2740; 
 }
 
-.header__nav__menu li:hover >ul{
+/* hover dropdown */
+.dropdown-item:hover{
+    background-color: #686f86;
+}
+
+.navbar-nav{
+    align-items: center;
+}
+
+.navbar-dark .navbar-toggler {
+    border-color: transparent;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color:#ffffff;
+}
+
+.header__div__menu a:hover{
+    background-color: #686f86b4;
+    border-radius: 15px;
+    color:#ffffff;
+}
+
+.header__div__menu ul ul li{
     display: block;
 }
 
-.header__nav__submenu li{
-    border-top: 1px solid #8b8b8b;
-    padding: 5px;
-    font-size: 19px;
-}
-
-.header__nav__submenu li:first-child{
-    border:none;
-}
-
-.header__nav__submenu li:hover{
-    background-color:#686f86;
+.header__div__menu ul li:hover > ul{
+    display: block;
 }
 
 /* FOOTER */
+.row{
+    align-items: center;
+    justify-content: space-evenly;
+}
 
 .footer{
     grid-area: footer1;
     display: flex;
     background-color:#555C73;
-    height: 100px;
-    font-size: 1rem;
-    z-index: 998;
+    height: auto;
 }
 
-.footer__imagen{
-    display: flex;
-    width: 10vw;
-    justify-content: left;
-    align-content: center;
-    align-items: center;
+.footer__div__nav li{
+    list-style: none;
 }
 
-.footer__imagen img{
-    height: 85%;
-    width: auto;
-    justify-self: center;
-    padding:15px;
+.footer__div__nav a:hover{
+    color: #0C1726;
+    background-color: transparent;
 }
 
 .footer__div{
-    z-index: 998;
     display: flex;
-    width: 80vw;
-    align-items: center;
-    padding: 5px;
 }
 
-.footer__div__referencias{
-    display: flex;
-    justify-content: center;
-    width: 40%;
+.footer__div__nav a{
+    padding:0;
+    font-size: 0.9rem;
 }
 
-.footer__div__referencias i{
-    color: #ffffff;
-    padding: 2px;
+.col-lg-4 .col-md-6{
+    margin: 0;
+
 }
 
-.footer__div__contacto{
-    width: 60%;
-    display: flex;
-    justify-content: center;
-}
-
-.footer__div__contacto i{
-    color: #ffffff;
-    padding: 2px;
-}
-
-
-.footer__nav__referencias, .footer__nav__contacto{
-    list-style: none;
-    text-align: left;
-    flex-direction: column;
-}
-
-.footer__div__phone,.footer__div__mail {
-    height: 16px;
-    width: auto;
-}
 /* contenedores de texto */
 /* h1 */
 .section__div__titulo{
@@ -236,16 +145,14 @@ p{
     z-index: 998;
     width: 40vw;
     padding: 5px 5px 10px 35px;
-    font-size: 4rem; 
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .section__div__titulo--acercaDe{
     display: flex;
     z-index: 998;
-    width: 40vw;
+    width: 45vw;
     padding: 0 5px 10px 35px;
-    font-size: 4rem;  
     margin-bottom: 30px;
 }
 
@@ -255,7 +162,6 @@ p{
     z-index: 998;
     width: 65vw;
     padding: 5px 5px 10px 35px;
-    font-size: 4rem;
     
 }
 
@@ -264,6 +170,7 @@ p{
     z-index: 998;
     font-size: 1.7rem;
     text-align: center; 
+    margin-bottom: 40px;
 }
 
 /* h3 */
@@ -272,7 +179,6 @@ p{
     z-index: 998;
     width: 40vw;
     padding: 5px 5px 10px 35px;
-    font-size: 1.3rem; 
 }
 
 /* h4 */
@@ -289,21 +195,27 @@ p{
     height: 20vh;
     z-index: 998;
     padding: 0px 5px 50px 35px;
-    font-size: 1.1rem; 
 }
+
 
 .section__div__texto--acercaDe{
     display: flex;
     width: 90vw;
     height: 20vh;
     z-index: 998;
-    padding: 0px 5px 50px 35px;
-    font-size: 1.1rem;  
+    padding: 0px 5px 50px 35px; 
 }
+
 
 /* contenedores de imagenes */
 /* index */
-.section__div--index{
+.jumbotron{
+    border-radius: 0;
+    margin: 0;
+    padding:0;
+}
+
+.section--index{
     background-image: url("../assets/img/solucionesempresariales.png");
     height:100vh;
     background-size: cover;
@@ -311,7 +223,8 @@ p{
     flex-direction: column;
     justify-content: center;   
 }
-.section__div--index:before{
+
+.section--index:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -320,8 +233,9 @@ p{
     position: absolute;
 }
 
+
 /* acerca de */
-.section__div--acercade{
+.section--acercaDe{
     background-image: url("../assets/img/acercade.png");
     height:100vh;
     background-size: cover;
@@ -329,7 +243,7 @@ p{
     flex-direction: column;
     justify-content: center;   
 }
-.section__div--acercade:before{
+.section--acercaDe:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -339,7 +253,7 @@ p{
 }
 
 /* servicios */
-.section__div--servicios{
+.section--servicios{
     background-image: url("../assets/img/servicios.png");
     height:100vh;
     background-size: cover;
@@ -348,7 +262,7 @@ p{
     justify-content: center;   
     align-items: center;
 }
-.section__div--servicios:before{
+.section--servicios:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -358,7 +272,7 @@ p{
 }
 
 /* quienes somos */
-.section__div--quienessomos{
+.section--quienessomos{
     background-image: url("../assets/img/quienessomos.png");
     height:100vh;
     background-size: cover;
@@ -366,7 +280,7 @@ p{
     flex-direction: column;
     justify-content: center;   
 }
-.section__div--quienessomos:before{
+.section--quienessomos:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -376,7 +290,7 @@ p{
 }
 
 /* contacto-formulario */
-.section__div--contacto{
+.section--contacto{
     background-image: url("../assets/img/contactanos.png");
     height:100vh;
     background-size: cover;
@@ -384,7 +298,7 @@ p{
     flex-direction: column;
     justify-content: center; 
 }
-.section__div--contacto:before{
+.section--contacto:before{
     content: "";
     background-color: #0C1726;
     width: 100%;
@@ -459,49 +373,26 @@ p{
 }
 
 /* SECCION: quienes somos */
-.section__div__contadoras{
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
+.jumbotron{
+    box-sizing: border-box;
 }
 
-.section__div__equipo{
+.contadora{
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    margin: 0 auto;
+    align-self: center;
+    text-align: center;
+}
+
+.card{
+    margin-top: 8px;
     background-color: rgba(255, 255, 255, 0.747);
     border-right: 1px solid #686f86;
     border-radius: 15px;
-    z-index: 998;
-    padding: 25px;
-    flex-direction: column;
-    margin:62px 0;
-    height: inherit;
-    /* flex-basis: 100%; */
 }
 
-.section__div__equipo--giovannabrasesco{
-    background-image: url("../assets/img/personaejemplo.png");
-    width: 100px;
-    height: 100px;
-    border-radius:150px;
-    background-size: cover;
-    margin: 0 auto;
-}
-.section__div__equipo--ximenaelizalde{
-    background-image: url("../assets/img/ximenaelizalde.png");
-    width: 100px;
-    height: 100px;
-    border-radius:150px;
-    background-size: cover;
-    margin: 0 auto;
-}
-
-.section__div__equipo--florenciaportillo{
-    background-image: url("../assets/img/personaejemplo2.png");
-    width: 100px;
-    height: 100px;
-    border-radius:150px;
-    background-size: cover;
-    margin: 0 auto;
-}
 .section__div__trayectoria p{
     color: #151b25;
     font-size: 1rem; 
@@ -510,9 +401,8 @@ p{
 }
 
 .section__div__trayectoria{
-    width: 23vw;
+    box-sizing: border-box;
 }
-
 
 /* SECCION : contacto */
 .section__div__article{
@@ -629,16 +519,16 @@ textarea{
 }
 
 /* SECCION: quienes somos */
-.section__div__contadoras:hover .hoverZoom,.section__div__table:hover .hoverZoom {
+.section__div--contadoras:hover .hoverZoom,.section__div__table:hover .hoverZoom {
     filter: blur(3px);
     opacity: 0.5;
     box-shadow: none;
 }
 
-.section__div__contadoras:hover .hoverZoom:hover{
+.section__div--contadoras:hover .hoverZoom:hover{
     filter: blur(0px);
     opacity: 1;
-    box-shadow:0 8px 20px 0px #0c1726c5;
+    box-shadow:0 8px 20px 0px #0c1726a2;
     transform: scale(1.2);
     transition: .3s ease-in-out;
 }
